--- a/RestaurantManagement.csproj
+++ b/RestaurantManagement.csproj
@@ -70,6 +70,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
         <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.8" />
+        <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
         <PackageReference Include="System.Text.Json" Version="8.0.4" />
     </ItemGroup>
 
